--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,14 @@
                     throw new Error('Failed to encrypt file');
                 }
 
-                const result = await response.text();
-                document.getElementById('encryptionResult').innerText = result;
+                const result = await response.json();
+                const { ivHex, encryptedFilePath } = result;
+
+                document.getElementById('encryptionResult').innerHTML = `
+                    <p>Encryption successful!</p>
+                    <p>IV (Initialization Vector): ${ivHex}</p>
+                    <p>Encrypted File: <a href="${encryptedFilePath}" download>Download</a></p>
+                `;
             } catch (error) {
                 console.error('Encryption error:', error);
                 document.getElementById('encryptionResult').innerText = 'Encryption failed';
