--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,7 +32,7 @@
                 }
 
                 const result = await response.json();
-                document.getElementById('encryptionResult').innerText = `Encryption successful!\nIV: ${result.ivHex}\nEncrypted File: ${result.encryptedFilePath}`;
+                document.getElementById('encryptionResult').innerText = `IV: ${result.ivHex}\nEncrypted File Path: ${result.encryptedFilePath}`;
             } catch (error) {
                 console.error('Encryption error:', error);
                 document.getElementById('encryptionResult').innerText = 'Encryption failed';
