--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
             const fileInput = document.getElementById('fileToEncrypt');
             const file = fileInput.files[0];
 
+            if (!file) {
+                alert('Please select a file to encrypt.');
+                return;
+            }
+
             const formData = new FormData();
             formData.append('fileToEncrypt', file);
 
