--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,25 @@
+<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Encryption and Decryption</title>
+    <title>File Encryption</title>
 </head>
 <body>
     <h1>File Encryption</h1>
-    <form id="encryptionForm" enctype="multipart/form-data">
-        <input type="file" name="fileToEncrypt" id="fileToEncrypt" required />
-        <input type="text" name="keyString" id="keyStringEncrypt" placeholder="Enter key" required />
+    <form id="uploadForm" enctype="multipart/form-data">
+        <input type="file" name="fileToEncrypt" id="fileToEncrypt" />
+        <input type="text" name="keyString" id="keyString" placeholder="Enter key" />
         <button type="button" onclick="encryptFile()">Encrypt File</button>
     </form>
     <div id="encryptionResult"></div>
-
-    <h1>File Decryption</h1>
-    <form id="decryptionForm" enctype="multipart/form-data">
-        <input type="file" name="encryptedFile" id="encryptedFile" required />
-        <input type="text" name="keyString" id="keyStringDecrypt" placeholder="Enter key" required />
-        <input type="text" name="ivHex" id="ivHex" placeholder="Enter IV" required />
-        <button type="button" onclick="decryptFile()">Decrypt File</button>
-    </form>
-    <div id="decryptionResult"></div>
 
     <script>
         async function encryptFile() {
             const fileInput = document.getElementById('fileToEncrypt');
             const file = fileInput.files[0];
-            const keyString = document.getElementById('keyStringEncrypt').value;
-
-            if (!file || !keyString) {
-                alert('Please select a file and enter a key.');
-                return;
-            }
+            const keyString = document.getElementById('keyString').value;
 
             const formData = new FormData();
             formData.append('fileToEncrypt', file);
@@ -49,54 +36,18 @@
                 }
 
                 const result = await response.json();
+                console.log('Encryption result:', result);
+
+                // Construct download link
                 const downloadLink = document.createElement('a');
-                downloadLink.href = result.encryptedFilePath;
+                downloadLink.href = `/download/${encodeURIComponent(result.encryptedFileName)}`;
                 downloadLink.download = `encrypted-${file.name}`;
                 downloadLink.innerText = 'Download Encrypted File';
-                document.getElementById('encryptionResult').innerHTML = `IV: ${result.ivHex}`;
                 document.getElementById('encryptionResult').appendChild(downloadLink);
+
             } catch (error) {
                 console.error('Encryption error:', error);
                 document.getElementById('encryptionResult').innerText = 'Encryption failed';
-            }
-        }
-
-        async function decryptFile() {
-            const fileInput = document.getElementById('encryptedFile');
-            const file = fileInput.files[0];
-            const keyString = document.getElementById('keyStringDecrypt').value;
-            const ivHex = document.getElementById('ivHex').value;
-
-            if (!file || !keyString || !ivHex) {
-                alert('Please select a file, enter a key, and provide the IV.');
-                return;
-            }
-
-            const formData = new FormData();
-            formData.append('encryptedFile', file);
-            formData.append('keyString', keyString);
-            formData.append('ivHex', ivHex);
-
-            try {
-                const response = await fetch('/decrypt', {
-                    method: 'POST',
-                    body: formData
-                });
-
-                if (!response.ok) {
-                    throw new Error('Failed to decrypt file');
-                }
-
-                const result = await response.json();
-                const downloadLink = document.createElement('a');
-                downloadLink.href = result.decryptedFilePath;
-                downloadLink.download = `decrypted-${file.name}`;
-                downloadLink.innerText = 'Download Decrypted File';
-                document.getElementById('decryptionResult').innerHTML = '';
-                document.getElementById('decryptionResult').appendChild(downloadLink);
-            } catch (error) {
-                console.error('Decryption error:', error);
-                document.getElementById('decryptionResult').innerText = 'Decryption failed';
             }
         }
     </script>
