--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,11 @@
                 const result = await response.json();
                 console.log('Encryption result:', result);
 
+                // Display IV to user
+                const ivElement = document.createElement('p');
+                ivElement.innerText = `IV (Initialization Vector): ${result.ivHex}`;
+                document.getElementById('encryptionResult').appendChild(ivElement);
+
                 // Construct download link for encrypted file
                 const downloadLink = document.createElement('a');
                 downloadLink.href = `/download/${encodeURIComponent(result.encryptedFileName)}`;
